IDE GCrazy/myCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from myC.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class myCParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, FLOAT=42, INT=43, DIGIT=44, LETTER=45, Whitespace=46, 
		LineComment=47, BlockComment=48;
	public const int
		RULE_tipo = 0, RULE_programa = 1, RULE_atribuicao = 2, RULE_bloco = 3, 
		RULE_stmt = 4, RULE_incremento = 5, RULE_decls = 6, RULE_funcao = 7, RULE_declaracao = 8, 
		RULE_argumentos = 9, RULE_string = 10, RULE_identificador = 11, RULE_expr = 12, 
		RULE_negacao = 13, RULE_expressao = 14, RULE_operador = 15, RULE_termo = 16, 
		RULE_expr_aritmetica = 17, RULE_expr_relacional = 18, RULE_operador_logico = 19, 
		RULE_condicao = 20, RULE_expr_logica = 21, RULE_condicional = 22, RULE_loop = 23, 
		RULE_retorno = 24, RULE_chamada_funcao = 25, RULE_entrada = 26, RULE_saida = 27, 
		RULE_selecao = 28, RULE_casos = 29, RULE_operador_relacional = 30, RULE_comparacao = 31, 
		RULE_array_decl = 32, RULE_acesso_array = 33, RULE_for = 34, RULE_if_else = 35;
	public static readonly string[] ruleNames = {
		"tipo", "programa", "atribuicao", "bloco", "stmt", "incremento", "decls", 
		"funcao", "declaracao", "argumentos", "string", "identificador", "expr", 
		"negacao", "expressao", "operador", "termo", "expr_aritmetica", "expr_relacional", 
		"operador_logico", "condicao", "expr_logica", "condicional", "loop", "retorno", 
		"chamada_funcao", "entrada", "saida", "selecao", "casos", "operador_relacional", 
		"comparacao", "array_decl", "acesso_array", "for", "if_else"
	};

	private static readonly string[] _LiteralNames = {
		null, "'int'", "'float'", "'void'", "'string'", "'main'", "'('", "')'", 
		"'='", "';'", "'{'", "'}'", "'++'", "','", "'\"'", "'!'", "'+'", "'-'", 
		"'*'", "'/'", "'&&'", "'||'", "'if'", "'while'", "'return'", "'scanf'", 
		"'printf'", "'switch'", "'case'", "':'", "'break;'", "'default'", "'=='", 
		"'!='", "'<'", "'<='", "'>'", "'>='", "'['", "']'", "'for'", "'else'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "FLOAT", "INT", "DIGIT", "LETTER", 
		"Whitespace", "LineComment", "BlockComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "myC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static myCParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public myCParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public myCParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TipoContext : ParserRuleContext {
		public TipoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tipo; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterTipo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitTipo(this);
		}
	}

	[RuleVersion(0)]
	public TipoContext tipo() {
		TipoContext _localctx = new TipoContext(Context, State);
		EnterRule(_localctx, 0, RULE_tipo);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgramaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclsContext decls() {
			return GetRuleContext<DeclsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlocoContext bloco() {
			return GetRuleContext<BlocoContext>(0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterPrograma(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitPrograma(this);
		}
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(Context, State);
		EnterRule(_localctx, 2, RULE_programa);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			decls();
			State = 75;
			Match(T__4);
			State = 76;
			Match(T__5);
			State = 77;
			Match(T__6);
			State = 78;
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtribuicaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentificadorContext identificador() {
			return GetRuleContext<IdentificadorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(myCParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT() { return GetToken(myCParser.FLOAT, 0); }
		public AtribuicaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atribuicao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterAtribuicao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitAtribuicao(this);
		}
	}

	[RuleVersion(0)]
	public AtribuicaoContext atribuicao() {
		AtribuicaoContext _localctx = new AtribuicaoContext(Context, State);
		EnterRule(_localctx, 4, RULE_atribuicao);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			identificador();
			State = 81;
			Match(T__7);
			State = 85;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__13:
				{
				State = 82;
				@string();
				}
				break;
			case INT:
				{
				State = 83;
				Match(INT);
				}
				break;
			case FLOAT:
				{
				State = 84;
				Match(FLOAT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 87;
			Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlocoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bloco; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterBloco(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitBloco(this);
		}
	}

	[RuleVersion(0)]
	public BlocoContext bloco() {
		BlocoContext _localctx = new BlocoContext(Context, State);
		EnterRule(_localctx, 6, RULE_bloco);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			Match(T__9);
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 90;
				stmt();
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 48378775913566L) != 0) );
			State = 95;
			Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IncrementoContext incremento() {
			return GetRuleContext<IncrementoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SaidaContext saida() {
			return GetRuleContext<SaidaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AtribuicaoContext atribuicao() {
			return GetRuleContext<AtribuicaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressaoContext expressao() {
			return GetRuleContext<ExpressaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclsContext decls() {
			return GetRuleContext<DeclsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlocoContext bloco() {
			return GetRuleContext<BlocoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CondicionalContext condicional() {
			return GetRuleContext<CondicionalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LoopContext loop() {
			return GetRuleContext<LoopContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RetornoContext retorno() {
			return GetRuleContext<RetornoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Chamada_funcaoContext chamada_funcao() {
			return GetRuleContext<Chamada_funcaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EntradaContext entrada() {
			return GetRuleContext<EntradaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelecaoContext selecao() {
			return GetRuleContext<SelecaoContext>(0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitStmt(this);
		}
	}

	[RuleVersion(0)]
	public StmtContext stmt() {
		StmtContext _localctx = new StmtContext(Context, State);
		EnterRule(_localctx, 8, RULE_stmt);
		try {
			State = 109;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 97;
				incremento();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 98;
				saida();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 99;
				atribuicao();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 100;
				expressao();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 101;
				decls();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 102;
				bloco();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 103;
				condicional();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 104;
				loop();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 105;
				retorno();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 106;
				chamada_funcao();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 107;
				entrada();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 108;
				selecao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncrementoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentificadorContext identificador() {
			return GetRuleContext<IdentificadorContext>(0);
		}
		public IncrementoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_incremento; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterIncremento(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitIncremento(this);
		}
	}

	[RuleVersion(0)]
	public IncrementoContext incremento() {
		IncrementoContext _localctx = new IncrementoContext(Context, State);
		EnterRule(_localctx, 10, RULE_incremento);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			identificador();
			State = 112;
			Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracaoContext[] declaracao() {
			return GetRuleContexts<DeclaracaoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracaoContext declaracao(int i) {
			return GetRuleContext<DeclaracaoContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncaoContext[] funcao() {
			return GetRuleContexts<FuncaoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncaoContext funcao(int i) {
			return GetRuleContext<FuncaoContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Array_declContext[] array_decl() {
			return GetRuleContexts<Array_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Array_declContext array_decl(int i) {
			return GetRuleContext<Array_declContext>(i);
		}
		public DeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decls; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitDecls(this);
		}
	}

	[RuleVersion(0)]
	public DeclsContext decls() {
		DeclsContext _localctx = new DeclsContext(Context, State);
		EnterRule(_localctx, 12, RULE_decls);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					State = 117;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
					case 1:
						{
						State = 114;
						declaracao();
						}
						break;
					case 2:
						{
						State = 115;
						funcao();
						}
						break;
					case 3:
						{
						State = 116;
						array_decl();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 119;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentificadorContext identificador() {
			return GetRuleContext<IdentificadorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlocoContext bloco() {
			return GetRuleContext<BlocoContext>(0);
		}
		public FuncaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterFuncao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitFuncao(this);
		}
	}

	[RuleVersion(0)]
	public FuncaoContext funcao() {
		FuncaoContext _localctx = new FuncaoContext(Context, State);
		EnterRule(_localctx, 14, RULE_funcao);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			tipo();
			State = 122;
			identificador();
			State = 123;
			Match(T__5);
			State = 124;
			Match(T__6);
			State = 125;
			Match(T__9);
			State = 126;
			bloco();
			State = 127;
			Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclaracaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentificadorContext identificador() {
			return GetRuleContext<IdentificadorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(myCParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT() { return GetToken(myCParser.FLOAT, 0); }
		public DeclaracaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaracao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterDeclaracao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitDeclaracao(this);
		}
	}

	[RuleVersion(0)]
	public DeclaracaoContext declaracao() {
		DeclaracaoContext _localctx = new DeclaracaoContext(Context, State);
		EnterRule(_localctx, 16, RULE_declaracao);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			tipo();
			State = 130;
			identificador();
			State = 137;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 131;
				Match(T__7);
				State = 135;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__13:
					{
					State = 132;
					@string();
					}
					break;
				case INT:
					{
					State = 133;
					Match(INT);
					}
					break;
				case FLOAT:
					{
					State = 134;
					Match(FLOAT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			State = 139;
			Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentosContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressaoContext[] expressao() {
			return GetRuleContexts<ExpressaoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressaoContext expressao(int i) {
			return GetRuleContext<ExpressaoContext>(i);
		}
		public ArgumentosContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argumentos; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterArgumentos(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitArgumentos(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentosContext argumentos() {
		ArgumentosContext _localctx = new ArgumentosContext(Context, State);
		EnterRule(_localctx, 18, RULE_argumentos);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 141;
			expressao();
			State = 146;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__12) {
				{
				{
				State = 142;
				Match(T__12);
				State = 143;
				expressao();
				}
				}
				State = 148;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LETTER() { return GetTokens(myCParser.LETTER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LETTER(int i) {
			return GetToken(myCParser.LETTER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DIGIT() { return GetTokens(myCParser.DIGIT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGIT(int i) {
			return GetToken(myCParser.DIGIT, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_string; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterString(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitString(this);
		}
	}

	[RuleVersion(0)]
	public StringContext @string() {
		StringContext _localctx = new StringContext(Context, State);
		EnterRule(_localctx, 20, RULE_string);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149;
			Match(T__13);
			State = 151;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 150;
				_la = TokenStream.LA(1);
				if ( !(_la==DIGIT || _la==LETTER) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 153;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==DIGIT || _la==LETTER );
			State = 155;
			Match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentificadorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LETTER() { return GetTokens(myCParser.LETTER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LETTER(int i) {
			return GetToken(myCParser.LETTER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DIGIT() { return GetTokens(myCParser.DIGIT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGIT(int i) {
			return GetToken(myCParser.DIGIT, i);
		}
		public IdentificadorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identificador; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.EnterIdentificador(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImyCListener typedListener = listener as ImyCListener;
			if (typedListener != null) typedListener.ExitIdentificador(this);
		}
	}
